--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monsters Rolodex</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 
@@ -15,6 +15,6 @@
   </header>
   <section class="card-list"></section>
   
-  <script src="/assets/js/app.js"></script>
+  <script src="./assets/js/app.js"></script>
 </body>
 </html>
